--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button class="button" data-filter=".weather">Weather</button>
       <button class="button" data-filter=".datepicker">DatePicker</button>
       <button class="button" data-filter=".password">PW Checker</button>
-       <button class="button" data-filter=".textarea">TexArea</button>
+       <button class="button" data-filter=".textarea">TextArea</button>
       </div>
 
   
